tests/ui/coroutine/yield-in-function.rs
#![feature(coroutines)]

fn main() { yield; }
//~^ ERROR yield expression outside
//~| ERROR `yield` can only be used in
